--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </section>
 
     <footer>
-        <p>Be sure to enjoy your nuts(mine) in moderation as part of a balanced diet!</p>
+        <p>Be sure to enjoy my nuts in moderation as part of a balanced diet!</p>
     </footer>
 </body>
 </html>
