--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
             margin: 10px 40px;
             margin-right: 50px;
         }
+         select { background: deeppink;
+         }
+        input{ background: deeppink;
+        margin: 5px; background-color: deeppink; border-color: deeppink;}
+
         
 
     </style>
@@ -55,7 +60,22 @@
         <img src="best.jpeg" width="300">
         <p>Yes thats right my favourite nut is YOUUU BABY CAUSE I LOVE YOU VERY MUCH</p>
     </section>
+<h2>Select Your Favorite Nut</h2>
 
+    <form action="#" method="POST">
+        <label for="Nuts">Choose your favorite nut:</label>
+        <select id="Nuts" name="Nuts">
+            <option value="almond">Almonds</option>
+            <option value="walnut">Walnut</option>
+            <option value="cashew">Cashew</option>
+            <option value="Pistachios">Pistachios</option>
+            <option value="Brazil">Brazil Nuts</option>
+            <option value="You"> You(My Favourite)</option>
+        </select>
+
+        <br><br>
+        <input type="submit" value="Submit">
+    </form>
     <footer>
         <p>Be sure to enjoy your nuts in moderation as part of a balanced diet!</p>
     </footer>
