--- a/index.html
+++ b/index.html
@@ -12,12 +12,10 @@
             margin: 10px 40px;
             margin-right: 50px;
         }
-         select { background: deeppink;
+        select { background: deeppink;
          }
         input{ background: deeppink;
         margin: 5px; background-color: deeppink; border-color: deeppink;}
-
-        
 
     </style>
 </head>
@@ -60,7 +58,7 @@
         <img src="best.jpeg" width="300">
         <p>Yes thats right my favourite nut is YOUUU BABY CAUSE I LOVE YOU VERY MUCH</p>
     </section>
-<h2>Select Your Favorite Nut</h2>
+    <h2>Select Your Favorite Nut</h2>
 
     <form action="#" method="POST">
         <label for="Nuts">Choose your favorite nut:</label>
@@ -76,8 +74,9 @@
         <br><br>
         <input type="submit" value="Submit">
     </form>
+
     <footer>
-        <p>Be sure to enjoy your nuts in moderation as part of a balanced diet!</p>
+        <p>Be sure to enjoy your nuts(mine) in moderation as part of a balanced diet!</p>
     </footer>
 </body>
 </html>
