--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     </form>
 
     <footer>
-        <p>Be sure to enjoy your nuts(mine) in moderation as part of a balanced diet!</p>
+        <p>Be sure to enjoy your nuts in moderation as part of a balanced diet!</p>
     </footer>
 </body>
 </html>
