--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         document.getElementById("NutsForm").addEventListener("submit", handleSubmit);
     </script>
     <footer>
-        <p>Be sure to enjoy your nuts(mine) in moderation as part of a balanced diet!</p>
+        <p>Be sure to enjoy your nuts in moderation as part of a balanced diet!</p>
     </footer>
 </body>
 </html>
