--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             const selectedNut = document.getElementById("Nuts").value;
 
             // Process the selected fruit (e.g., display it in an alert)
-            alert("You selected: " + selectedNut + " (me personally your my favourite)");
+            alert("You selected: " + selectedNut + " (me personally you're my favourite)");
         }
     </script>
 </head>
