--- a/ummm.html
+++ b/ummm.html
@@ -39,7 +39,7 @@
         <img src="gym.PNG" width="300">
         <h3>Made her move</h3>
         <img src="plotting.JPG" width="300">
-        <h3>Killed me and ended up in an asylum where shes living happily to this day🥲</h3>
+        <h3>Killed me and ended up in an asylum where shes living happily to this day🥲(i be haunting her lowkey)</h3>
         <img src="best.jpeg" width="300">
 
 
