--- a/memories.html
+++ b/memories.html
@@ -19,7 +19,7 @@
     </nav>
    </header>
     <h1>Chapters</h1>
-    <p>This section is about memories ig idk</p>
+    <h2>This section is about memories ig idk</h2>
     <section>
         <h2>CHAPTER 1: SIDDDDD</h2>
         <h3>Baby sid </h3>
