--- a/memories.html
+++ b/memories.html
@@ -11,9 +11,9 @@
    <header>
     <nav>
         <ul>
-            <li><a href="index.html">HOME</a></li>
-            <li><a href="memories.html">CHAPTERS🥰</a></li>
-            <li><a href="ummm.html">UMMM🤨</a></li>
+            <li><a href="index.html" style="color: black; text-decoration: none;">HOME</a></li>
+            <li><a href="memories.html" style="color: black; text-decoration: none;">CHAPTERS🥰</a></li>
+            <li><a href="ummm.html" style="color: black; text-decoration: none;">UMMM🤨</a></li>
         </ul>
         
     </nav>
